// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-button Default Story 1`] = `
<button
  class="m-button m--is-skin-primary"
  type="button"
>
  <!---->
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Disabled 1`] = `
<button
  class="m-button m--is-skin-primary m--is-disabled"
  disabled="disabled"
  type="button"
>
  <!---->
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Disabled And Waiting 1`] = `
<button
  class="m-button m--is-skin-primary m--is-waiting m--is-disabled"
  disabled="disabled"
  type="button"
>
  <!---->
   
  <div
    aria-hidden="true"
    class="m-spinner m-button__icon m--is-left"
  >
    <!---->
     
    <div />
  </div>
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Fullsize 1`] = `
<button
  class="m-button m--is-skin-primary m--is-full-size"
  type="button"
>
  <!---->
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Icon 1`] = `
<button
  class="m-button m--is-skin-primary"
  type="button"
>
  <svg
    aria-hidden="true"
    class="m-icon m-button__icon m--is-left"
    height="12px"
    width="12px"
  >
    <!---->
     
    <use
      aria-hidden="true"
      class=""
    />
  </svg>
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Icon 20 Px 1`] = `
<button
  class="m-button m--is-skin-primary"
  type="button"
>
  <svg
    aria-hidden="true"
    class="m-icon m-button__icon m--is-left"
    height="20px"
    width="20px"
  >
    <!---->
     
    <use
      aria-hidden="true"
      class=""
    />
  </svg>
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Icon Disabled 1`] = `
<button
  class="m-button m--is-skin-primary m--is-disabled"
  disabled="disabled"
  type="button"
>
  <svg
    aria-hidden="true"
    class="m-icon m-button__icon m--is-left"
    height="12px"
    width="12px"
  >
    <!---->
     
    <use
      aria-hidden="true"
      class=""
    />
  </svg>
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Icon Full Size 1`] = `
<button
  class="m-button m--is-skin-primary m--is-full-size"
  type="button"
>
  <svg
    aria-hidden="true"
    class="m-icon m-button__icon m--is-left"
    height="12px"
    width="12px"
  >
    <!---->
     
    <use
      aria-hidden="true"
      class=""
    />
  </svg>
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Icon Position Right 1`] = `
<button
  class="m-button m--is-skin-secondary"
  type="button"
>
  <!---->
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <svg
    aria-hidden="true"
    class="m-icon m-button__icon m--is-right"
    height="12px"
    width="12px"
  >
    <!---->
     
    <use
      aria-hidden="true"
      class=""
    />
  </svg>
</button>
`;

exports[`Storyshots modul-components|m-button Icon Precision 1`] = `
<button
  class="m-button m--is-skin-primary"
  type="button"
>
  <svg
    aria-hidden="true"
    class="m-icon m-button__icon m--is-left"
    height="12px"
    width="12px"
  >
    <!---->
     
    <use
      aria-hidden="true"
      class=""
    />
  </svg>
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button  
    <span
      class="m-button__precision"
    >
      Button precision
      <!---->
      
        
    </span>
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Icon Waiting 1`] = `
<button
  class="m-button m--is-skin-primary m--is-waiting"
  type="button"
>
  <!---->
   
  <div
    aria-hidden="true"
    class="m-spinner m-button__icon m--is-left"
  >
    <!---->
     
    <div />
  </div>
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Precision 1`] = `
<button
  class="m-button m--is-skin-primary"
  type="button"
>
  <!---->
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button  
    <span
      class="m-button__precision"
    >
      Button precision
      <!---->
      
        
    </span>
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Reset 1`] = `
<button
  class="m-button m--is-skin-primary"
  type="reset"
>
  <!---->
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Secondary Default 1`] = `
<button
  class="m-button m--is-skin-secondary"
  type="button"
>
  <!---->
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Secondary Disabled 1`] = `
<button
  class="m-button m--is-skin-secondary m--is-disabled"
  disabled="disabled"
  type="button"
>
  <!---->
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Secondary Full Size 1`] = `
<button
  class="m-button m--is-skin-secondary m--is-full-size"
  type="button"
>
  <!---->
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Secondary Icon 1`] = `
<button
  class="m-button m--is-skin-secondary"
  type="button"
>
  <svg
    aria-hidden="true"
    class="m-icon m-button__icon m--is-left"
    height="12px"
    width="12px"
  >
    <!---->
     
    <use
      aria-hidden="true"
      class=""
    />
  </svg>
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Secondary Icon 20 Px 1`] = `
<button
  class="m-button m--is-skin-secondary"
  type="button"
>
  <svg
    aria-hidden="true"
    class="m-icon m-button__icon m--is-left"
    height="20px"
    width="20px"
  >
    <!---->
     
    <use
      aria-hidden="true"
      class=""
    />
  </svg>
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Secondary Precision 1`] = `
<button
  class="m-button m--is-skin-secondary"
  type="button"
>
  <!---->
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button  
    <span
      class="m-button__precision"
    >
      Button precision
      <!---->
      
        
    </span>
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Secondary Waiting 1`] = `
<button
  class="m-button m--is-skin-secondary m--is-waiting"
  type="button"
>
  <!---->
   
  <div
    aria-hidden="true"
    class="m-spinner m-button__icon m--is-left"
  >
    <!---->
     
    <div />
  </div>
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Submit 1`] = `
<button
  class="m-button m--is-skin-primary"
  type="submit"
>
  <!---->
   
  <!---->
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;

exports[`Storyshots modul-components|m-button Waiting 1`] = `
<button
  class="m-button m--is-skin-primary m--is-waiting"
  type="button"
>
  <!---->
   
  <div
    aria-hidden="true"
    class="m-spinner m-button__icon m--is-left"
  >
    <!---->
     
    <div />
  </div>
   
  <span
    class="m-button__text"
  >
    A Button 
    <!---->
  </span>
   
  <!---->
   
  <!---->
</button>
`;
